# ai-camera-cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  get_network_files.sh
include/: Camera.hpp  DetectionInference.hpp  FrameQueue.hpp  HardwareMonitor.hpp  MappedBuffer.hpp  ThreadPool.hpp  common.h  double_buffer.hpp  hailo_common.hpp  hailo_nms_decode.hpp  hailo_tensors.hpp  server.hpp  yolo_hailortpp.hpp
include/bbox_colours/: bbox_colours.hpp
include/dataset_labels/: coco_eighty.hpp  coco_ninety.hpp
include/global/: io_mutex.hpp
include/hailo_device/: HailoDeviceInfo.hpp
include/server/: Server.hpp
next-app/: next.config.ts  package-lock.json  package.json
next-app/src/app/: layout.tsx
next-app/src/components/: camera-stream.tsx
next-app/src/components/ui/: progress.tsx
src/: detection_inference.cpp  main.cpp  server.cpp  yolo_hailortpp.cpp
